--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Hello World</title>
+    <title>Google</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
@@ -16,7 +16,7 @@
         <a href="#"><img class="icon" src="assets/images/default_profile.png"></a>
       </nav>
     </header>
-    <section>
+    <section id="search-box">
       <img src="assets/images/google_logo.png" alt="Google Logo">
       <form action="demo_form.asp">
         <input type="text" name="search">
@@ -26,12 +26,12 @@
     </section>
     <footer>
       <nav>
-        <a href="index.html">Advertising</a>
-        <a href="speakers.html">Business</a>
-        <a href="schedule.html">About</a>
-        <a href="venue.html">Privacy</a>
-        <a href="register.html">Terms</a>
-        <a href="register.html">Settings</a>
+        <table>
+          <tr>
+            <td id="left-footer"><a href="#">Advertising</a><a href="#">Business</a><a href="#">About</a></td>
+            <td id="right-footer"><a href="#">Privacy</a><a href="#">Terms</a><a href="#">Settings</a></td>
+          </tr>
+        </table>
       </nav>
     </footer>
   </body>
