update search section and header section

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
       <nav>
         <a href="#">Name</a>
-        <a href="#">Gmail</a>
-        <a href="#">Images</a>
+        <a class="header-clickable" href="#">Gmail</a>
+        <a class="header-clickable" href="#">Images</a>
         <a href="#"><img class="icon" src="assets/images/grid_icon.png"></a>
         <a href="#"><img class="icon" src="assets/images/gmail-bell.png"></a>
         <a href="#"><img class="icon" src="assets/images/default_profile.png"></a>
