--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
     </section>
     <footer>
       <nav>
-        <div id="footer-columns-container">
-        <table>
-          <tr>
-            <td id="left-footer"><a href="#">Advertising</a><a href="#">Business</a><a href="#">About</a></td>
-            <td id="right-footer"><a href="#">Privacy</a><a href="#">Terms</a><a href="#">Settings</a></td>
-          </tr>
-        </table>
-      </div>
+        <div>
+        <span id="left-footer">
+          <span id="left-links"><a href="#">Advertising</a><a href="#">Business</a><a href="#">About</a></span>
+        </span>
+        <span id="right-footer">
+          <span id="right-links"><a href="#">Privacy</a><a href="#">Terms</a><a href="#">Settings</a></span>
+        </span>
+        </div>
       </nav>
     </footer>
   </body>
